// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckboxGroup > renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":r1:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":r1:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":r4:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":r4:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > renders correctly with direction row 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-10 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":rf:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":rf:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":ri:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":ri:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > renders correctly with error content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

.emotion-44 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby=":ru:-hint"
                aria-invalid="true"
                class="emotion-15 emotion-16"
                id=":ru:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":ru:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="true"
            >
              <input
                aria-checked="false"
                aria-describedby=":r11:-hint"
                aria-invalid="true"
                class="emotion-15 emotion-16"
                id=":r11:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":r11:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="emotion-44 emotion-9"
      >
        Eror content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > renders correctly with helper content 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

.emotion-44 {
  color: #727683;
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":rm:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":rm:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":rp:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":rp:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <span
        class="emotion-44 emotion-9"
      >
        Helper content
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-13 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-13 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-13[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-13[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-13[aria-disabled='true'] .emotion-18 {
  fill: #e9eaeb;
}

.emotion-13[aria-disabled='true'] .emotion-18 .emotion-20 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 {
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16:checked+.emotion-18 .emotion-20 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 {
  fill: #e5dbfd;
}

.emotion-13[aria-disabled='true'] .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-13 .emotion-16:checked+.emotion-18 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-13 .emotion-16:checked+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13 .emotion-16[aria-invalid="true"]:checked+.emotion-18 .emotion-20 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-13 .emotion-16[aria-checked="mixed"]+.emotion-18 .emotion-20 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='false'][aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='false']+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-13:hover[aria-disabled='false'] .emotion-16[aria-invalid='true'][aria-checked='true']+.emotion-18 .emotion-20 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 {
  fill: #e51963;
}

.emotion-13 .emotion-16[aria-invalid="true"]+.emotion-18 .emotion-20 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-13 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-15 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-15:not(:disabled) {
  cursor: pointer;
}

.emotion-15:disabled {
  cursor: not-allowed;
}

.emotion-15:not(:disabled):checked+.emotion-18,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 {
  fill: #8c40ef;
}

.emotion-15:not(:disabled):checked+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-checked='mixed']+.emotion-18 .emotion-20 {
  stroke: #8c40ef;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 {
  fill: #ffebf2;
}

.emotion-15:not(:disabled)[aria-invalid='true']+.emotion-18 .emotion-20,
.emotion-15:not(:disabled)[aria-invalid='mixed']+.emotion-18 .emotion-20 {
  stroke: #b3144d;
}

.emotion-15:focus+.emotion-18 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-15:focus+.emotion-18 .emotion-20 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-15[aria-invalid='true']:focus+.emotion-18 .emotion-20 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-17 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-17 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-19 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":r8:"
                name="Checkbox."
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":r8:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-12 emotion-13 emotion-14"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-15 emotion-16"
                id=":rb:"
                name="Checkbox."
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-17 emotion-18"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-19 emotion-20"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-21 emotion-1"
              >
                <div
                  class="emotion-23 emotion-1"
                >
                  <label
                    class="emotion-25 emotion-26 emotion-9"
                    for=":rb:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup > renders correctly with required prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-8 {
  color: #222638;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.emotion-11 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-16 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 0.5rem;
}

.emotion-16 .eqr7bqq4 {
  cursor: pointer;
}

.emotion-16[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-16[aria-disabled='true'] .eqr7bqq4 {
  cursor: not-allowed;
}

.emotion-16[aria-disabled='true'] .emotion-21 {
  fill: #e9eaeb;
}

.emotion-16[aria-disabled='true'] .emotion-21 .emotion-23 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-invalid="true"]:checked+.emotion-21 {
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-invalid="true"]:checked+.emotion-21 .emotion-23 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-invalid="true"]+.emotion-21 {
  fill: #ffebf2;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-invalid="true"]+.emotion-21 .emotion-23 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.emotion-16[aria-disabled='true'] .emotion-19:checked+.emotion-21 {
  fill: #e5dbfd;
}

.emotion-16[aria-disabled='true'] .emotion-19:checked+.emotion-21 .emotion-23 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-checked="mixed"]+.emotion-21 {
  fill: #e5dbfd;
}

.emotion-16[aria-disabled='true'] .emotion-19[aria-checked="mixed"]+.emotion-21 .emotion-23 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.emotion-16 .emotion-19:checked+.emotion-21 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.emotion-16 .emotion-19:checked+.emotion-21 .emotion-23 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-16 .emotion-19[aria-invalid="true"]:checked+.emotion-21 .emotion-23 {
  fill: #e51963;
  stroke: #e51963;
}

.emotion-16 .emotion-19[aria-checked="mixed"]+.emotion-21 .eqr7bqq6 {
  fill: #ffffff;
}

.emotion-16 .emotion-19[aria-checked="mixed"]+.emotion-21 .emotion-23 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='false'][aria-checked='false']+.emotion-21 .emotion-23 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='false'][aria-checked='true']+.emotion-21 .emotion-23 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='false'][aria-checked='mixed']+.emotion-21 .emotion-23 {
  stroke: #792dd4;
  fill: #792dd4;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true'][aria-checked='false']+.emotion-21 .emotion-23 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-16:hover[aria-disabled='false'] .emotion-19[aria-invalid='true'][aria-checked='true']+.emotion-21 .emotion-23 {
  stroke: #d6175c;
  fill: #d6175c;
}

.emotion-16 .emotion-19[aria-invalid="true"]+.emotion-21 {
  fill: #e51963;
}

.emotion-16 .emotion-19[aria-invalid="true"]+.emotion-21 .emotion-23 {
  stroke: #e51963;
  fill: #ffebf2;
}

.emotion-16 label {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-18 {
  position: absolute;
  white-space: nowrap;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  border-width: 0;
}

.emotion-18:not(:disabled) {
  cursor: pointer;
}

.emotion-18:disabled {
  cursor: not-allowed;
}

.emotion-18:not(:disabled):checked+.emotion-21,
.emotion-18:not(:disabled)[aria-checked='mixed']+.emotion-21 {
  fill: #8c40ef;
}

.emotion-18:not(:disabled):checked+.emotion-21 .emotion-23,
.emotion-18:not(:disabled)[aria-checked='mixed']+.emotion-21 .emotion-23 {
  stroke: #8c40ef;
}

.emotion-18:not(:disabled)[aria-invalid='true']+.emotion-21,
.emotion-18:not(:disabled)[aria-invalid='mixed']+.emotion-21 {
  fill: #ffebf2;
}

.emotion-18:not(:disabled)[aria-invalid='true']+.emotion-21 .emotion-23,
.emotion-18:not(:disabled)[aria-invalid='mixed']+.emotion-21 .emotion-23 {
  stroke: #b3144d;
}

.emotion-18:focus+.emotion-21 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.emotion-18:focus+.emotion-21 .emotion-23 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.emotion-18[aria-invalid='true']:focus+.emotion-21 .emotion-23 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.emotion-20 {
  border-radius: 0.25rem;
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
}

.emotion-20 path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-22 {
  fill: #ffffff;
  stroke: #d9dadd;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-29 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <fieldset
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <div
            class="emotion-6 emotion-1"
          >
            <legend
              class="emotion-8 emotion-9"
            >
              Label 
              <svg
                class="emotion-10 emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
                />
              </svg>
            </legend>
          </div>
          <div
            class="emotion-0 emotion-1"
          >
            <div
              aria-disabled="false"
              class="emotion-15 emotion-16 emotion-17"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-18 emotion-19"
                id=":r16:"
                name="Checkbox.value-1"
                type="checkbox"
                value="value-1"
              />
              <svg
                class="emotion-20 emotion-21"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-22 emotion-23"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-24 emotion-1"
              >
                <div
                  class="emotion-26 emotion-1"
                >
                  <label
                    class="emotion-28 emotion-29 emotion-9"
                    for=":r16:"
                  >
                    Checkbox 1
                  </label>
                </div>
              </div>
            </div>
            <div
              aria-disabled="false"
              class="emotion-15 emotion-16 emotion-17"
              data-checked="false"
              data-error="false"
            >
              <input
                aria-checked="false"
                aria-invalid="false"
                class="emotion-18 emotion-19"
                id=":r19:"
                name="Checkbox.value-2"
                type="checkbox"
                value="value-2"
              />
              <svg
                class="emotion-20 emotion-21"
                fill="none"
                viewBox="0 0 24 24"
              >
                <g>
                  <rect
                    class="emotion-22 emotion-23"
                    height="16"
                    rx="0.125rem"
                    stroke-width="2"
                    width="16"
                    x="4"
                    y="4"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                    fill="white"
                    fill-rule="evenodd"
                    height="9"
                    width="12"
                    x="5"
                    y="4"
                  />
                </g>
              </svg>
              <div
                class="emotion-24 emotion-1"
              >
                <div
                  class="emotion-26 emotion-1"
                >
                  <label
                    class="emotion-28 emotion-29 emotion-9"
                    for=":r19:"
                  >
                    Checkbox 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
